# zxide

./: CMakeLists.txt  README.md  TODO.txt
cmake/: Macros.cmake  Qt.cmake
doc/: INFO.txt  Index.md  KNOW_HOW.txt
doc/examples/example1/: _sections.asm  common.h  draw.asm  example1.zxprj  main.asm  main.c
doc/examples/example1/gfx/: tile_back.gfx  tile_front.gfx
doc/examples/example1/maps/: test.map  test.tileset
editor/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  AbstractEditorTab.cpp  AbstractEditorTab.h  CMakeLists.txt  CompilerDialog.cpp  CompilerDialog.h  CompilerDialog.ui  EmulatorCore.cpp  EmulatorCore.h  EmulatorWindow.cpp  EmulatorWindow.h  FileManager.cpp  FileManager.h  FileManager.ui  IEditorTab.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  PlayAudioDialog.cpp  PlayAudioDialog.h  PlayAudioDialog.ui  Settings.cpp  Settings.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  ThirdPartyDialog.cpp  ThirdPartyDialog.h  ThirdPartyDialog.ui  config.h.in  main.cpp
editor/code/: CodeTab.cpp  CodeTab.h  CodeTab.ui  TextEditor.cpp  TextEditor.h
editor/compiler/: Assembler.cpp  Assembler.h  AssemblerContext.cpp  AssemblerContext.h  AssemblerLexer.cpp  AssemblerLexer.h  AssemblerParser.cpp  AssemblerParser.h  AssemblerToken.h  BasicProgram.cpp  BasicProgram.h  CMakeLists.txt  CodeEmitter.cpp  CodeEmitter.h  CompileSettings.h  Compiler.cpp  Compiler.h  CompilerDialog.cpp  CompilerDialog.h  CompilerDialog.ui  Compressor.cpp  Compressor.h  DiskFileWriter.cpp  DiskFileWriter.h  ExprEvalContext.cpp  ExprEvalContext.h  Expression.cpp  Expression.h  ExpressionParser.cpp  GfxData.cpp  GfxData.h  GfxFile.cpp  GfxFile.h  IErrorReporter.h  IO.cpp  IO.h  Linker.cpp  Linker.h  LuaBindings.cpp  LuaBindings.h  (+36 more)
editor/compiler/tests/: .gitignore  CMakeLists.txt  CaseTests.cpp  DataBlob.cpp  DataBlob.h  DataTests.cpp  EquTests.cpp  ErrorConsumer.cpp  ErrorConsumer.h  ErrorTests.cpp  ExprTests.cpp  ExpressionTests.cpp  IfTests.cpp  LabelTests.cpp  MacroTests.cpp  OpcodeTests.cpp  RepeatTests.cpp  SectionTests.cpp  TestUtil.cpp  TestUtil.h  genopcodetests.cmd  genopcodetests.py  main.cpp
editor/compiler/tests/helpers/: DataBlob.cpp  DataBlob.h  ErrorConsumer.cpp  ErrorConsumer.h  TestUtil.cpp  TestUtil.h
editor/debugger/: AddBreakpointDialog.cpp  AddBreakpointDialog.h  AddBreakpointDialog.ui  BreakpointsModel.cpp  BreakpointsModel.h  BreakpointsWindow.cpp  BreakpointsWindow.h  BreakpointsWindow.ui  ControlFlowLogWindow.cpp  ControlFlowLogWindow.h  ControlFlowLogWindow.ui  DisassemblyWidget.cpp  DisassemblyWidget.h  DisplayWidget.cpp  DisplayWidget.h  EditMemoryDialog.cpp  EditMemoryDialog.h  EditMemoryDialog.ui  EditRegisterDialog.ui  EmulatorCore.cpp  EmulatorCore.h  MemoryLogWindow.cpp  MemoryLogWindow.h  MemoryLogWindow.ui  MemoryMapDialog.cpp  MemoryMapDialog.h  MemoryMapDialog.ui  MemoryWidget.cpp  MemoryWidget.h  Reg16Widget.cpp  Reg16Widget.h  Reg16Widget.ui  Reg8Widget.cpp  Reg8Widget.h  Reg8Widget.ui  RegistersWidget.cpp  RegistersWidget.h  RegistersWidget.ui  StackWidget.cpp  StackWidget.h  (+2 more)
editor/editor/: AbstractEditorTab.cpp  AbstractEditorTab.h  DuplicateDialog.cpp  DuplicateDialog.h  DuplicateDialog.ui  EditorTabFactory.cpp  EditorTabFactory.h  FileManager.cpp  FileManager.h  FileManager.ui  HighlightManager.cpp  HighlightManager.h  IEditorTab.h  NewFileDialog.cpp  NewFileDialog.h  NewFileDialog.ui  Project.cpp  Project.h  ProjectSettingsDialog.cpp  ProjectSettingsDialog.h  ProjectSettingsDialog.ui  RenameDialog.cpp  RenameDialog.h  RenameDialog.ui
editor/editor/code/: CodeEditorTab.cpp  CodeEditorTab.h  CodeEditorTab.ui  CodeTab.cpp  CodeTab.h  CodeTab.ui  TextEditor.cpp  TextEditor.h
editor/editor/disasm/: DisassemblyTab.cpp  DisassemblyTab.h  DisassemblyTab.ui
editor/editor/gfx/: GfxData.cpp  GfxData.h  GfxEditorTab.cpp  GfxEditorTab.h  GfxEditorTab.ui  GfxEditorWidget.cpp  GfxEditorWidget.h
editor/editor/levels/: LevelsTab.h  LevelsTab.ui
editor/editor/map/: EditEntityDialog.cpp  EditEntityDialog.h  EditEntityDialog.ui  MapEditorTab.cpp  MapEditorTab.h  MapEditorTab.ui  MapEditorWidget.cpp  MapEditorWidget.h
editor/editor/tile/: TileData.cpp  TileData.h  TileEditorTab.cpp  TileEditorTab.h  TileEditorTab.ui  TileEditorWidget.cpp  TileEditorWidget.h
editor/editor/tiles/: TilesTab.h  TilesTab.ui
editor/editor/tileset/: TileSetEditorTab.cpp  TileSetEditorTab.h  TileSetEditorTab.ui
editor/levels/: LevelsTab.cpp  LevelsTab.h  LevelsTab.ui
editor/res/: compiler.qrc  resources.qrc
editor/res/fonts/: makefont.py
editor/scripting/: CMakeLists.txt  GfxFileUtil.h  LuaFiles.cpp  LuaFiles.h  LuaGfx.cpp  LuaGfx.h  LuaMap.cpp  LuaMap.h  LuaMusic.cpp  LuaMusic.h  LuaTileSet.cpp  LuaTileSet.h  LuaUtil.cpp  LuaUtil.h  LuaVM.cpp  LuaVM.h
editor/tiles/: TilesTab.cpp  TilesTab.h  TilesTab.ui
editor/util/: ClickableLabel.cpp  ClickableLabel.h  ComboBox.cpp  ComboBox.h  FileSelectorMenu.cpp  FileSelectorMenu.h  GfxFileUtil.cpp  GfxFileUtil.h  IO.cpp  IO.h  ImageImport.cpp  ImageImport.h  ScrollBar.cpp  ScrollBar.h  Settings.cpp  Settings.h  SimpleTextPainter.cpp  SimpleTextPainter.h  SimpleTextWidget.cpp  SimpleTextWidget.h
